--- a/app/contacts.html
+++ b/app/contacts.html
@@ -31,7 +31,7 @@
     </ul>
 </nav>
 <div class="first_contact">
-<h3 class="psy_in_our_life__h3">КАК ПРОХОДИТ ПЕРВЫЙ СЕАНС?</h3>
+<h3 class="psy_in_our_life__h3">Как проходит первый сеанс?</h3>
 <p class="psy_in_our_life__p">
     Первая встреча — это всегда знакомство. Обычно я рекомендую новым клиентам перед первой встречей подумать, 
 что им важно рассказать о себе, какие вопросы они хотели бы задать, чтобы чувствовать себя максимально 
@@ -46,7 +46,7 @@
 
 <div class="second_part_one">
     <h3 class="psy_in_our_life__h3">
-        ФОРМАТ КОНСУЛЬТАЦИЙ
+        Формат консультаций
     </h3>
     <p class="psy_in_our_life__p">
         На данный момент я провожу консультации как очно, так и по Skype.
@@ -79,7 +79,7 @@
     </div>
 </div>
 <div class="kont_adress">
-    <h5 class="kont_adress__h5"> КАБИНЕТ НА КРАСНЫХ ВОРОТАХ </h5>
+    <h5 class="kont_adress__h5"> Кабинет на Красных Воротах </h5>
     <p class="psy_in_our_life__p">Мы можем встретиться с вами в моём кабинете на Красных Воротах в предварительно оговорённое время. Это 
             уютный кабинет, в котором вы точно будете чувствовать себя комфортно и безопасно.</p>
     <p class="psy_in_our_life__p">
@@ -111,34 +111,34 @@
 
 
 <footer class="footer">
-  <div class="wrap_footer_head">
-      <h3 class="wrap_footer_head_h3">Форма обратной связи</h3>
-      <h5 class="wrap_footer_head_h5">Здесь можно договориться о встрече или задать интересующий вас вопрос</h5>
-  </div>
- <div class="form_wrap">
-  <form action="index.php" method="post">
-    <div class="form_first_group">
-      <input type="text" name="name"  maxlength="15" placeholder="&#xf007; Ваше имя" required>
-      <input type="email" name="email" maxlength="30" placeholder="&#xf0e0;   Ваша почта" required>
-      <input type="tel" name="telephone" maxlength="15" placeholder="&#xf095;    Ваш номер" required>
-    </div>
-    <div class="form_wrap_text_wrap">
-        <textarea name="message" id="texta" rows="8" placeholder="Тема обращения" required></textarea>
-        <input type="submit" value="отправить">
-    </div>
-  </form>
-</div>
-<div class="footer_low_wrapper">
-  <div class="text_right">
-      <p> &copy; 2018 yakupoff  </p>
-      <p>All Rights Reserved</p>
-  </div>
-  <div class="social_icons">
-      <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt="письмо"></a>
-      <a href="https://t-do.ru/NataliaChizhikova"> <img src="img/footer_telegram.png" alt="telegram"></a>
-      <a href="https://www.facebook.com/profile.php?id=100001813093691"> <img src="img/footer_facebook — копия.png" alt=""></a>
-  </div>
-</div>
-</footer>
-</body>
-</html>
+        <div class="wrap_footer_head">
+            <h3 class="wrap_footer_head_h3">Форма обратной связи</h3>
+            <h5 class="wrap_footer_head_h5">Здесь можно договориться о встрече или задать интересующий вас вопрос</h5>
+        </div>
+       <div class="form_wrap">
+        <form action="index.php" method="post">
+          <div class="form_first_group">
+            <input type="text" name="name"  maxlength="15" placeholder="&#xf007; Ваше имя" required>
+            <input type="email" name="email" maxlength="30" placeholder="&#xf0e0;   Ваша почта" required>
+            <input type="tel" name="telephone" maxlength="15" placeholder="&#xf095;    Ваш номер" required>
+          </div>
+          <div class="form_wrap_text_wrap">
+              <textarea name="message" id="texta" rows="8" cols="40" placeholder="Тема обращения" required></textarea>
+              <input type="submit" value="отправить">
+          </div>
+        </form>
+      </div>
+      <div class="footer_low_wrapper">
+        <div class="text_right">
+            <p> &copy; 2018 yakupoff  </p>
+            <p>All Rights Reserved</p>
+        </div>
+        <div class="social_icons">
+            <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt="письмо"></a>
+            <a href="https://t-do.ru/NataliaChizhikova"> <img src="img/footer_telegram.png" alt="telegram"></a>
+            <a href="https://www.facebook.com/profile.php?id=100001813093691"> <img src="img/footer_facebook — копия.png" alt=""></a>
+        </div>
+      </div>
+      </footer>
+      </body>
+      </html>
