--- a/app/materials.html
+++ b/app/materials.html
@@ -205,34 +205,34 @@
 
 
 <footer class="footer">
-  <div class="wrap_footer_head">
-      <h3 class="wrap_footer_head_h3">Форма обратной связи</h3>
-      <h5 class="wrap_footer_head_h5">Здесь можно договориться о встрече или задать интересующий вас вопрос</h5>
-  </div>
- <div class="form_wrap">
-  <form action="index.php" method="post">
-    <div class="form_first_group">
-      <input type="text" name="name"  maxlength="15" placeholder="&#xf007; Ваше имя" required>
-      <input type="email" name="email" maxlength="30" placeholder="&#xf0e0;   Ваша почта" required>
-      <input type="tel" name="telephone" maxlength="15" placeholder="&#xf095;    Ваш номер" required>
-    </div>
-    <div class="form_wrap_text_wrap">
-        <textarea name="message" id="texta" rows="8" placeholder="Тема обращения" required></textarea>
-        <input type="submit" value="отправить">
-    </div>
-  </form>
-</div>
-<div class="footer_low_wrapper">
-  <div class="text_right">
-      <p> &copy; 2018 yakupoff  </p>
-      <p>All Rights Reserved</p>
-  </div>
-  <div class="social_icons">
-      <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt="письмо"></a>
-      <a href="https://t-do.ru/NataliaChizhikova"> <img src="img/footer_telegram.png" alt="telegram"></a>
-      <a href="https://www.facebook.com/profile.php?id=100001813093691"> <img src="img/footer_facebook — копия.png" alt=""></a>
-  </div>
-</div>
-</footer>
-</body>
-</html>
+        <div class="wrap_footer_head">
+            <h3 class="wrap_footer_head_h3">Форма обратной связи</h3>
+            <h5 class="wrap_footer_head_h5">Здесь можно договориться о встрече или задать интересующий вас вопрос</h5>
+        </div>
+       <div class="form_wrap">
+        <form action="index.php" method="post">
+          <div class="form_first_group">
+            <input type="text" name="name"  maxlength="15" placeholder="&#xf007; Ваше имя" required>
+            <input type="email" name="email" maxlength="30" placeholder="&#xf0e0;   Ваша почта" required>
+            <input type="tel" name="telephone" maxlength="15" placeholder="&#xf095;    Ваш номер" required>
+          </div>
+          <div class="form_wrap_text_wrap">
+              <textarea name="message" id="texta" rows="8" cols="40" placeholder="Тема обращения" required></textarea>
+              <input type="submit" value="отправить">
+          </div>
+        </form>
+      </div>
+      <div class="footer_low_wrapper">
+        <div class="text_right">
+            <p> &copy; 2018 yakupoff  </p>
+            <p>All Rights Reserved</p>
+        </div>
+        <div class="social_icons">
+            <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt="письмо"></a>
+            <a href="https://t-do.ru/NataliaChizhikova"> <img src="img/footer_telegram.png" alt="telegram"></a>
+            <a href="https://www.facebook.com/profile.php?id=100001813093691"> <img src="img/footer_facebook — копия.png" alt=""></a>
+        </div>
+      </div>
+      </footer>
+      </body>
+      </html>
