--- a/app/method.html
+++ b/app/method.html
@@ -85,9 +85,10 @@
     </p>
 </div>
 <div class="method_wrapper_fourth">
+    
     <div class="method_three_methods">
-        <img src="img/about_method_.png" alt="сложные мысли">
-        <div class="method_three_methods_wrapper">
+            <img src="img/about_method_.png" alt="сложные мысли">
+        <div class="method_three_methods_second">
         <h5 class="method_three_methods__h5">
             Три основных принципа <br>
             когнитивно-поведенческой психотерапии:
@@ -98,14 +99,15 @@
             <li>мы можем развить навык отслеживания мыслей и работать над их изменением;</li>
             <li>изменив мышление, можно изменить что-либо в поведении. </li>
         </ul>
+        </div>
 
-    </div>
+   
     </div>
     <h5 class="method_wrapper_fourth__h5">
         Несколько причин, по которым вам нужно выбрать именно когнитивно-поведенческий 
         подход в психотерапии:
     </h5>
-    <div class="base">
+    
     <ul class="method_first__list">
         <li> вас что-то беспокоит, это продолжается некоторое время, и ситуация не меняется;</li>
         <li>вы видите, что одна и та же ситуация повторяется с вами на разных жизненных этапах, у вас есть ощущение, что вы двигаетесь по одному и тому же сценарию, и вас это не <span> устраивает; </li>
@@ -113,39 +115,38 @@
         <li>вы любите думать и анализировать, вам нравится чёткость и ясность.</li>
         </ul>
 </div>
-</div>
 <!-- здесь индивидуальная часть сайта заканчивается -->
 
 
 <footer class="footer">
-  <div class="wrap_footer_head">
-      <h3 class="wrap_footer_head_h3">Форма обратной связи</h3>
-      <h5 class="wrap_footer_head_h5">Здесь можно договориться о встрече или задать интересующий вас вопрос</h5>
-  </div>
- <div class="form_wrap">
-  <form action="index.php" method="post">
-    <div class="form_first_group">
-      <input type="text" name="name"  maxlength="15" placeholder="&#xf007; Ваше имя" required>
-      <input type="email" name="email" maxlength="30" placeholder="&#xf0e0;   Ваша почта" required>
-      <input type="tel" name="telephone" maxlength="15" placeholder="&#xf095;    Ваш номер" required>
-    </div>
-    <div class="form_wrap_text_wrap">
-        <textarea name="message" id="texta" rows="8" placeholder="Тема обращения" required></textarea>
-        <input type="submit" value="отправить">
-    </div>
-  </form>
-</div>
-<div class="footer_low_wrapper">
-  <div class="text_right">
-      <p> &copy; 2018 yakupoff  </p>
-      <p>All Rights Reserved</p>
-  </div>
-  <div class="social_icons">
-      <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt="письмо"></a>
-      <a href="https://t-do.ru/NataliaChizhikova"> <img src="img/footer_telegram.png" alt="telegram"></a>
-      <a href="https://www.facebook.com/profile.php?id=100001813093691"> <img src="img/footer_facebook — копия.png" alt=""></a>
-  </div>
-</div>
-</footer>
-</body>
-</html>
+        <div class="wrap_footer_head">
+            <h3 class="wrap_footer_head_h3">Форма обратной связи</h3>
+            <h5 class="wrap_footer_head_h5">Здесь можно договориться о встрече или задать интересующий вас вопрос</h5>
+        </div>
+       <div class="form_wrap">
+        <form action="index.php" method="post">
+          <div class="form_first_group">
+            <input type="text" name="name"  maxlength="15" placeholder="&#xf007; Ваше имя" required>
+            <input type="email" name="email" maxlength="30" placeholder="&#xf0e0;   Ваша почта" required>
+            <input type="tel" name="telephone" maxlength="15" placeholder="&#xf095;    Ваш номер" required>
+          </div>
+          <div class="form_wrap_text_wrap">
+              <textarea name="message" id="texta" rows="8" cols="40" placeholder="Тема обращения" required></textarea>
+              <input type="submit" value="отправить">
+          </div>
+        </form>
+      </div>
+      <div class="footer_low_wrapper">
+        <div class="text_right">
+            <p> &copy; 2018 yakupoff  </p>
+            <p>All Rights Reserved</p>
+        </div>
+        <div class="social_icons">
+            <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt="письмо"></a>
+            <a href="https://t-do.ru/NataliaChizhikova"> <img src="img/footer_telegram.png" alt="telegram"></a>
+            <a href="https://www.facebook.com/profile.php?id=100001813093691"> <img src="img/footer_facebook — копия.png" alt=""></a>
+        </div>
+      </div>
+      </footer>
+      </body>
+      </html>
