--- a/app/index.html
+++ b/app/index.html
@@ -34,8 +34,10 @@
 
 
 <!-- здесь начинается меняющийся контент -->
+<div class="wrapper_intro__img">
+</div>
+
 <div class="wrapper_intro">
-    <div class="wrapper_intro__img" data-wow-offset="5"><img src="img/main_client_and_therapist.png" alt="клиент и психотерапевт психолог"></div>
     <div class="wrapper_intro__text">
       <p>Добрый день, я Наталья Чижикова, клинический психолог, психолог-консультант и психотерапевт. </p>
       <p>Рада приветствовать вас на моем сайте, вместе мы сможем найти причину вашей проблемы, а главное – решить ее.</p>
@@ -112,7 +114,7 @@
       <input type="tel" name="telephone" maxlength="15" placeholder="&#xf095;    Ваш номер" required>
     </div>
     <div class="form_wrap_text_wrap">
-        <textarea name="message" id="texta" rows="8" placeholder="Тема обращения" required></textarea>
+        <textarea name="message" id="texta" rows="8" cols="40" placeholder="Тема обращения" required></textarea>
         <input type="submit" value="отправить">
     </div>
   </form>
