almost finish verstka

--- a/app/about.html
+++ b/app/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="сайт психолога Натальи Чижиковой">
-    <meta name="keywords" content="Психология, психолог, психолог Москва, психолог по Скайпу, психология отношений, психотерапия, психотерапевт Москва, психотерапевт по Скайпу, когнитивно-поведенческая психотерапия, когнитивно-поведенческий психотерапевт, cbt-терапевт, экзистенциальный психотерапевт, тревога, депрессия, панические атаки, любовная зависимость, клинический психолог, клиническая психология, психологическое консультирование, смысл жизни, ассертивность, фобия, аэрофобия, социофобия, клаустрофобия">
+    <meta name="keywords" content="Психология, психолог, психолог Москва, психолог по cкайпу, психология отношений, психотерапия, психотерапевт Москва, психотерапевт по Скайпу, когнитивно-поведенческая психотерапия, когнитивно-поведенческий психотерапевт, cbt-терапевт, экзистенциальный психотерапевт, тревога, депрессия, панические атаки, любовная зависимость, клинический психолог, клиническая психология, психологическое консультирование, смысл жизни, ассертивность, фобия, аэрофобия, социофобия, клаустрофобия">
     <meta name="author" content="Наталья Чижикова">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Сайт психолога Наталья Чижиковой</title>
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="img/favicon.png" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Serif|Playfair+Display" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -142,7 +142,7 @@
         </div>
         <div class="row_img__first">
             <img src="img\about_diplom_with_profession.png" alt="переквалификация">
-            <span class="img\about_diplom_with_profession.png" >Базовое образование</span>
+            <span class="row_img__first__span" >Базовое образование</span>
             <span class="row_img_first_mpgu">РНИМУ им. Н. И. Пирогова </span>
             <span class="row_img__first__span" >Получение квалификации «Клинический психолог»</span>
         </div>
@@ -160,7 +160,6 @@
 <h6 class="base">Участие в конференциях</h6>
 <div class="row_img">
     <div class="row_img__first">
-       
         <img src="img\od\study_lesson.jpeg" alt="диплом 1 степени об участии в конференции">
         <span class="row_img__first__span" >УЧАСТИЕ В КОНФЕРЕНЦИИ </span>
         <span class="row_img_first_mpgu">СТУДЕНЧЕСКАЯ НАУКА </span>
@@ -168,7 +167,7 @@
     </div>
     <div class="row_img__first">
         <img src="img\od\conf_vigot.jpeg" alt="переквалификация">
-        <span class="img\about_diplom_with_profession.png">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
+        <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
         <span class="row_img_first_mpgu">Наследие и инновации — продолжение культурно-исторической традиции Л.С. Выготского</span>
         <span class="row_img__first__span"> Сертификат участия в конференции </span>
     </div>
@@ -189,7 +188,7 @@
     </div>
     <div class="row_img__first">
         <img src="img\od\lomosov-2017_sert.jpeg" alt="переквалификация">
-        <span class="img\about_diplom_with_profession.png" >УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
+        <span class="row_img__first__span" >УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
         <span class="row_img_first_mpgu">XXIII Международная научная конференция студентов, аспирантов и молодых ученых «Ломоносов» (МГУ), 2017</span>
         <span class="row_img__first__span">Сертификат участия в конференции</span>
     </div>
@@ -210,8 +209,6 @@
 
 </div>
 </div>
-
-
 
 <div class="academic_wrapper">
     <h5>Психотерапевтическое образование</h5>
