--- a/app/materials.html
+++ b/app/materials.html
@@ -108,16 +108,16 @@
     <h5 class="psy_in_our_life__h5"> Есть ряд симптомов:</h5>
 
     <div class="wrapper_symptoms_anxious">
-        <ul class="method_first__list">
-        <li>периодическое ощущение, что должно произойти что-то ужасное и вы не в силах это предотвратить; </li>
-        <li> учащённое сердцебиение, чувство удушья, головокружение от беспокоящих мыслей;  </li>
-        <li>навязчивые страхи, связанные с потерей близких, даже если  на это нет никаких оснований; </li>
-        <li>одна или несколько изолированных фобий, социофобия;  </li>
-        <li>страх смерти или ипохондрические мысли;  </li>
-        <li>страх толпы или одиночества;  </li>
-        <li>страх передвижения в транспорте;  </li>
-        <li>страх покраснения;  </li>
-        <li>навязчивые мысли, действия и т. д. </li>
+        <ul class="method_first__list special_list">
+            <li>периодическое ощущение, что должно произойти что-то ужасное и вы не в силах это предотвратить; </li>
+            <li> учащённое сердцебиение, чувство удушья, головокружение от беспокоящих мыслей;  </li>
+            <li>навязчивые страхи, связанные с потерей близких, даже если  на это нет никаких оснований; </li>
+            <li>одна или несколько изолированных фобий, социофобия;  </li>
+            <li>страх смерти или ипохондрические мысли;  </li>
+            <li>страх толпы или одиночества;  </li>
+            <li>страх передвижения в транспорте;  </li>
+            <li>страх покраснения;  </li>
+            <li>навязчивые мысли, действия и т. д. </li>
         </ul>
     <div class="wrapper_sympotms_anxioux__image">
         <img src="img/useful_material_girl_with_crow.png" alt="девушка одолеваемая внутренними страхами">
