almost fix gallery

--- a/app/about.html
+++ b/app/about.html
@@ -12,8 +12,6 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Serif|Playfair+Display" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <script src="js/wow.js" defer></script>
     <script src="js/code.js" defer></script>
 </head>
 <body>
@@ -23,11 +21,11 @@
 </div>
 <nav class="navigation"> 
     <ul>
-      <a href="about.html"><li>обо мне</li> </a>
-      <a href="psychotherapy.html"><li>о психотерапии </li></a>
-      <a href="method.html"><li> о подходе</li></a>
-      <a href="materials.html"><li> полезные материалы</li></a>
-      <a href="contacts.html"><li> контакты  </li></a>
+    <li><a href="about.html">обо мне </a></li>
+    <li><a href="psychotherapy.html">о психотерапии </a></li>
+    <li> <a href="method.html">о подходе</a></li>
+    <li><a href="materials.html"> полезные материалы></a></li>
+    <li> <a href="contacts.html"> контакты  </a></li>
     </ul>
 </nav>
 
@@ -83,7 +81,7 @@
         <hr color=>
         <h6 class="academic__h6 h6_first">Академическое образование</h6>
         <div class="academic__img"> <img src="img/about_diplom_bachelor.png" alt="диплом бакалавра"> </div>
-        <div class="academic__img">   <img src="img/about_diplom_with_profession.png" alt=" диплом о профессиональной переподготовке"></div>
+        <div class="academic__img"> <img src="img/about_diplom_with_profession.png" alt=" диплом о профессиональной переподготовке"></div>
         <div class="academic__img"> <img src="img/about_magister.png" alt=" диплом о профессиональной переподготовке"></div> 
         <p class="academic__p">
             <span class="academic_span">2016</span>
@@ -132,7 +130,7 @@
 <div class="academic_wrapper">
     <hr color=>
     <h5>Дипломы и сертификаты</h5>
-    <h6 class="base">Базовое образование</h6>
+    <h6 class="academic__h6">Базовое образование</h6>
     <div class="row_img">
         <div class="row_img__first">
             <img src="img\about_diplom_bachelor.png" alt="диплом бакалавра">
@@ -157,30 +155,29 @@
 
 
 <div class="academic_wrapper">
-<h6 class="base">Участие в конференциях</h6>
-<div class="row_img">
-    <div class="row_img__first">
-        <img src="img\od\study_lesson.jpeg" alt="диплом 1 степени об участии в конференции">
-        <span class="row_img__first__span" >УЧАСТИЕ В КОНФЕРЕНЦИИ </span>
-        <span class="row_img_first_mpgu">СТУДЕНЧЕСКАЯ НАУКА </span>
-        <span class="row_img__first__span"> Диплом 1 степени </span>
-    </div>
-    <div class="row_img__first">
-        <img src="img\od\conf_vigot.jpeg" alt="переквалификация">
-        <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
-        <span class="row_img_first_mpgu">Наследие и инновации — продолжение культурно-исторической традиции Л.С. Выготского</span>
-        <span class="row_img__first__span"> Сертификат участия в конференции </span>
-    </div>
-    <div class="row_img__first">
-        <img src="img\od\lomonosov_2016.jpeg" alt="диплом магистра">
-        <span class="row_img__first__span" >УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
-        <span class="row_img_first_mpgu"> XXIII Международная научная конференция студентов, аспирантов и молодых ученых «Ломоносов» (МГУ), 2016  </span>
-        <span class="row_img__first__span" >Получение квалификации «Магистр психологии»</span>
-    </div>
+    <h6 class="academic__h6">Участие в конференциях</h6>
+    <div class="row_img">
+      <div class="row_img__first">
+          <img src="img\od\study_lesson.jpeg" alt="диплом 1 степени об участии в конференции">
+          <span class="row_img__first__span" >УЧАСТИЕ В КОНФЕРЕНЦИИ </span>
+          <span class="row_img_first_mpgu">СТУДЕНЧЕСКАЯ НАУКА </span>
+          <span class="row_img__first__span"> Диплом 1 степени </span>
+      </div>
+      <div class="row_img__first">
+          <img src="img\od\conf_vigot.jpeg" alt="переквалификация">
+          <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
+          <span class="row_img_first_mpgu">Наследие и инновации — продолжение культурно-исторической традиции Л.С. Выготского</span>
+          <span class="row_img__first__span"> Сертификат участия в конференции </span>
+      </div>
+      <div class="row_img__first">
+          <img src="img\od\lomonosov_2016.jpeg" alt="диплом магистра">
+          <span class="row_img__first__span" >УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
+          <span class="row_img_first_mpgu"> XXIII Международная научная конференция студентов, аспирантов и молодых ученых «Ломоносов» (МГУ), 2016  </span>
+          <span class="row_img__first__span" >Получение квалификации «Магистр психологии»</span>
+      </div>
 </div>
 <div class="row_img row_img_second">
     <div class="row_img__first">
-       
         <img src="img\od\lomonosov_2016.jpeg" alt="сертификат конференции">
         <span class="row_img__first__span" >УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
         <span class="row_img_first_mpgu">XXIV Международная научная конференция студентов, аспирантов и молодых ученых «Ломоносов» (МГУ), 2017</span>
@@ -200,7 +197,7 @@
     </div>
 </div>
 <div class="row_img_third">
-    <div class="row_img__one">
+    <div class="row_img__the_third">
         <img src="img\od\rpp.png" alt="расстройства пищевого поведения">
         <span class="row_img__first__span" >УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
         <span class="row_img_first_mpgu">Сухаревские чтения.  Расстройства пищевого поведения у детей и подростков</span>
@@ -210,109 +207,99 @@
 </div>
 </div>
 
+
 <div class="academic_wrapper">
     <h5>Психотерапевтическое образование</h5>
     <div class="row_img">
         <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
+            <img src="img/kpt/dpdg.jpeg" alt="">
+            <span class="row_img__first_span">ПОВЫШЕНИ КВАЛИФИКАЦИИ</span>
+            <span class="row_img_first_mpgu"> Десенсибилизация и переработка движениями глаз: введение в метод</span>
+            <span class="row_img__first__span"> от Общероссийской психотерапевтической лиги</span>
         </div>
         <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
+            <img src="img\kpt\kpt_1.jpeg" alt="">
+            <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ</span>
+            <span class="row_img_first_mpgu">Основы когнитивно-поведенческой психотерапии</span>
+            <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
         </div>
         <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
+            <img src="img\kpt\kpt_1.jpeg" alt="">
+            <span class="row_img__first_span">УЧАСТИЕ В СЕМИНАРЕ</span>
+            <span class="row_img_first_mpgu">Введение в терапию. Терапевтические отношения </span>
+            <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
         </div>
     </div>
-    <div class="row_img_second">
+    <div class="row_img row_img_second">
         <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
+            <img src="img\kpt\kpt_3.jpeg" alt="">
+            <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
+            <span class="row_img_first_mpgu">Концептуализация и реструктуризация дисфункцинальных(иррациональных) убеждений в КПТ  </span>
+            <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии </span>
         </div>
         <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
+            <img src="img\kpt\kpt_4.jpeg" alt=" Когнитивная терапия Аарона Бека ">
+            <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
+            <span class="row_img_first_mpgu"> Когнитивная терапия Аарона Бека </span>
+            <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
         </div>
         <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
+            <img src="img\kpt\kpt_5.jpeg" alt="Альберт Эллис">
+            <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
+            <span class="row_img_first_mpgu"> Основы рационально-эмотивно-поведенческой терапии Альберта Эллиса</span>
+            <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
+        </div>
+    </div>
+    <div class="row_img row_img_second">
+        <div class="row_img__first">
+            <img src="img\kpt\kpt_12.jpeg" alt="">
+            <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
+            <span class="row_img_first_mpgu">Концептуализация и реструктуризация дисфункциональных(иррациональных) убеждений в КПТ </span>
+            <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
+        </div>
+        <div class="row_img__first">
+            <img src="img\kpt\kpt_6.jpeg" alt="основы поведенческой терапии">
+            <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ</span>
+            <span class="row_img_first_mpgu"> Основы поведенческой терапии</span>
+            <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
+        </div>
+        <div class="row_img__first">
+            <img src="img\kpt\kpt_7.jpeg" alt="терапия пустого усилия">
+            <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
+            <span class="row_img_first_mpgu"> Терапия пустого усилия </span>
+            <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии </span>
+        </div>
+    </div>
+    <div class="row_img row_img_second">
+        <div class="row_img__first">
+            <img src="img\kpt\kpt_8.jpeg" alt="">
+            <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ</span>
+            <span class="row_img_first_mpgu"> КПТ тревожных расстройств </span>
+            <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии </span>
+        </div>
+        <div class="row_img__first">
+            <img src="img\kpt\kpt_9.jpeg" alt="">
+            <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
+            <span class="row_img_first_mpgu"> КПТ депрессивных расстройств </span>
+            <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии  </span>
+        </div>
+        <div class="row_img__first">
+            <img src="img\kpt\kpt_10.jpeg" alt="">
+            <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ  </span>
+            <span class="row_img_first_mpgu"> КПТ зависимого поведения </span>
+            <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
         </div>
     </div>
     <div class="row_img_third">
         <div class="row_img__first">
             <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
+            <span class="row_img__first_span">СВТ</span>
+            <span class="row_img_first_mpgu"> Сертификат об окончании долгосрочной программы обучения когнитивно-поведенческой психотерапии</span>
+            <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии </span>
         </div>
-        <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
-        </div>
-        <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
+
         </div>
     </div>
-    <div class="row_img_second">
-        <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
-        </div>
-        <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
-        </div>
-        <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
-        </div>
-    </div>
-    <div class="row_img_third">
-        <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
-        </div>
-        <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
-        </div>
-        <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span"></span>
-            <span class="row_img_first_mpgu"></span>
-            <span class="row_img__first__span"></span>
-        </div>
-    </div>
-</div>
 
 
 <!-- здесь начинается меняющийся контент -->
