--- a/app/index.html
+++ b/app/index.html
@@ -6,14 +6,14 @@
     <meta name="keywords" content="Психология, психолог, психолог Москва, психолог по Скайпу, психология отношений, психотерапия, психотерапевт Москва, психотерапевт по Скайпу, когнитивно-поведенческая психотерапия, когнитивно-поведенческий психотерапевт, cbt-терапевт, экзистенциальный психотерапевт, тревога, депрессия, панические атаки, любовная зависимость, клинический психолог, клиническая психология, психологическое консультирование, смысл жизни, ассертивность, фобия, аэрофобия, социофобия, клаустрофобия">
     <meta name="author" content="Наталья Чижикова">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/jquery.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Сайт психолога Наталья Чижиковой</title>
     <link rel="icon" type="image/png" href="img/favicon.png" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Serif|Playfair+Display" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <script src="js/wow.js" defer></script>
+    <link rel="stylesheet" href="css/mag.css">
     <script src="js/code.js" defer></script>
 </head>
 <body>
@@ -30,7 +30,6 @@
       <a href="contacts.html"><li> контакты  </li></a>
     </ul>
 </nav>
-
 
 
 <!-- здесь начинается меняющийся контент -->
