--- a/app/about.html
+++ b/app/about.html
@@ -11,7 +11,11 @@
     <link rel="icon" type="image/png" href="img/favicon.png" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Serif|Playfair+Display" rel="stylesheet">
+    <link rel="stylesheet" href="css/mag.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/jquery.js" defer></script>
+    <script src="js/mag.js" defer></script>
+   
     <script src="js/code.js" defer></script>
 </head>
 <body>
@@ -80,9 +84,9 @@
     <div class="academic_information_first_column">
         <hr color=>
         <h6 class="academic__h6 h6_first">Академическое образование</h6>
-        <div class="academic__img"> <img src="img/about_diplom_bachelor.png" alt="диплом бакалавра"> </div>
-        <div class="academic__img"> <img src="img/about_diplom_with_profession.png" alt=" диплом о профессиональной переподготовке"></div>
-        <div class="academic__img"> <img src="img/about_magister.png" alt=" диплом о профессиональной переподготовке"></div> 
+        <div class="academic__img"> <a href="img\bachelor_big.jpg" class="psy_img"> <img src="img/about_diplom_bachelor.png" alt="диплом бакалавра"></a> </div>
+        <div class="academic__img"> <a href="img/rnimy_big.jpeg" class="psy_img">  <img src="img/about_diplom_with_profession.png" alt=" диплом о профессиональной переподготовке"></a> </div>
+        <div class="academic__img"> <a href="img/magister_big.jpeg" class="psy_img"><img src="img/about_magister.png" alt=" диплом о профессиональной переподготовке"></a>  </div> 
         <p class="academic__p">
             <span class="academic_span">2016</span>
             — МПГУ (бывш. МГПИ им. В. И. Ленина),
@@ -132,20 +136,20 @@
     <h5>Дипломы и сертификаты</h5>
     <h6 class="academic__h6">Базовое образование</h6>
     <div class="row_img">
-        <div class="row_img__first">
-            <img src="img\about_diplom_bachelor.png" alt="диплом бакалавра">
+        <div class="row_img__first fsp">
+            <a href="img\bachelor_big.jpg" class="psy_img"><img src="img\about_diplom_bachelor.png" alt="диплом бакалавра"></a>
             <span class="row_img__first__span" >Базовое образование</span>
             <span class="row_img_first_mpgu">МПГУ (бывш. МГПИ им. В. И. Ленина)</span>
             <span class="row_img__first__span" >Получение квалификации «Социальный психолог», «Психолог». </span>
         </div>
         <div class="row_img__first">
-            <img src="img\about_diplom_with_profession.png" alt="переквалификация">
+            <a href="img\rnimy_big.jpeg" class="psy_img"><img src="img\about_diplom_with_profession.png" alt="переквалификация"></a>
             <span class="row_img__first__span" >Базовое образование</span>
             <span class="row_img_first_mpgu">РНИМУ им. Н. И. Пирогова </span>
             <span class="row_img__first__span" >Получение квалификации «Клинический психолог»</span>
         </div>
         <div class="row_img__first">
-            <img src="img\about_magister.png" alt="диплом магистра">
+            <a href="img\magister_big.jpeg" class="psy_img"> <img src="img\about_magister.png" alt="диплом магистра"></a>
             <span class="row_img__first__span" >Базовое образование</span>
             <span class="row_img_first_mpgu">МПГУ (бывш. МГПИ им. В. И. Ленина)</span>
             <span class="row_img__first__span" >Получение квалификации «Магистр психологии»</span>
@@ -158,19 +162,19 @@
     <h6 class="academic__h6">Участие в конференциях</h6>
     <div class="row_img">
       <div class="row_img__first">
-          <img src="img\od\study_lesson.jpeg" alt="диплом 1 степени об участии в конференции">
+          <a href="img\od\study_lesson.jpeg" class="psy_img"><img src="img\od\study_lesson.jpeg" alt="диплом 1 степени об участии в конференции"></a>
           <span class="row_img__first__span" >УЧАСТИЕ В КОНФЕРЕНЦИИ </span>
           <span class="row_img_first_mpgu">СТУДЕНЧЕСКАЯ НАУКА </span>
           <span class="row_img__first__span"> Диплом 1 степени </span>
       </div>
       <div class="row_img__first">
-          <img src="img\od\conf_vigot.jpeg" alt="переквалификация">
+          <a href="img\od\conf_vigot.jpeg" class="psy_img"> <img src="img\od\conf_vigot.jpeg" alt="переквалификация"> </a>
           <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
           <span class="row_img_first_mpgu">Наследие и инновации — продолжение культурно-исторической традиции Л.С. Выготского</span>
           <span class="row_img__first__span"> Сертификат участия в конференции </span>
       </div>
       <div class="row_img__first">
-          <img src="img\od\lomonosov_2016.jpeg" alt="диплом магистра">
+        <a href="img\od\lomonosov_2016.jpeg" class="psy_img">  <img src="img\od\lomonosov_2016.jpeg" alt="диплом магистра"> </a>
           <span class="row_img__first__span" >УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
           <span class="row_img_first_mpgu"> XXIII Международная научная конференция студентов, аспирантов и молодых ученых «Ломоносов» (МГУ), 2016  </span>
           <span class="row_img__first__span" >Получение квалификации «Магистр психологии»</span>
@@ -178,27 +182,27 @@
 </div>
 <div class="row_img row_img_second">
     <div class="row_img__first">
-        <img src="img\od\lomonosov_2016.jpeg" alt="сертификат конференции">
+        <a href="img\od\lomonosov_2016.jpeg" class="psy_img">    <img src="img\od\lomonosov_2016.jpeg" alt="сертификат конференции"> </a>
         <span class="row_img__first__span" >УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
         <span class="row_img_first_mpgu">XXIV Международная научная конференция студентов, аспирантов и молодых ученых «Ломоносов» (МГУ), 2017</span>
         <span class="row_img__first__span" >Сертификат участия в конференции</span>
     </div>
     <div class="row_img__first">
-        <img src="img\od\lomosov-2017_sert.jpeg" alt="переквалификация">
+        <a href="img\od\lomosov-2017_sert.jpeg" class="psy_img">     <img src="img\od\lomosov-2017_sert.jpeg" alt="переквалификация"></a>
         <span class="row_img__first__span" >УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
         <span class="row_img_first_mpgu">XXIII Международная научная конференция студентов, аспирантов и молодых ученых «Ломоносов» (МГУ), 2017</span>
         <span class="row_img__first__span">Сертификат участия в конференции</span>
     </div>
     <div class="row_img__first">
-        <img src="img\od\school_psyc.jpeg" alt="диплом магистра">
+        <a href="img\od\school_psyc.jpeg" class="psy_img">     <img src="img\od\school_psyc.jpeg" alt="диплом магистра"> </a>
         <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
         <span class="row_img_first_mpgu"> Всероссийский педагогический МАРАФОН учебных предметов </span>
         <span class="row_img__first__span">Сертификат участника мастер-классов</span>
     </div>
 </div>
-<div class="row_img_third">
+<div class="row_img_third row_img">
     <div class="row_img__the_third">
-        <img src="img\od\rpp.png" alt="расстройства пищевого поведения">
+        <a href="img\od\rpp.png" class="psy_img"><img src="img\od\rpp.png" alt="расстройства пищевого поведения"> </a>
         <span class="row_img__first__span" >УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
         <span class="row_img_first_mpgu">Сухаревские чтения.  Расстройства пищевого поведения у детей и подростков</span>
         <span class="row_img__first__span" >Сертификат участия в конференции </span>
@@ -212,19 +216,19 @@
     <h5>Психотерапевтическое образование</h5>
     <div class="row_img">
         <div class="row_img__first">
-            <img src="img/kpt/dpdg.jpeg" alt="">
+            <a href="img/kpt/dpdg.jpeg" class="psy_img">  <img src="img/kpt/dpdg.jpeg" alt=""></a>
             <span class="row_img__first_span">ПОВЫШЕНИ КВАЛИФИКАЦИИ</span>
             <span class="row_img_first_mpgu"> Десенсибилизация и переработка движениями глаз: введение в метод</span>
             <span class="row_img__first__span"> от Общероссийской психотерапевтической лиги</span>
         </div>
         <div class="row_img__first">
-            <img src="img\kpt\kpt_1.jpeg" alt="">
+            <a href="img\kpt\kpt_1.jpeg" class="psy_img">   <img src="img\kpt\kpt_1.jpeg" alt=""> </a>
             <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ</span>
             <span class="row_img_first_mpgu">Основы когнитивно-поведенческой психотерапии</span>
             <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
         </div>
         <div class="row_img__first">
-            <img src="img\kpt\kpt_1.jpeg" alt="">
+            <a href="img\kpt\kpt_1.jpeg" class="psy_img"> <img src="img\kpt\kpt_1.jpeg" alt=""> </a>
             <span class="row_img__first_span">УЧАСТИЕ В СЕМИНАРЕ</span>
             <span class="row_img_first_mpgu">Введение в терапию. Терапевтические отношения </span>
             <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
@@ -232,73 +236,61 @@
     </div>
     <div class="row_img row_img_second">
         <div class="row_img__first">
-            <img src="img\kpt\kpt_3.jpeg" alt="">
+            <a href="img\kpt\kpt_3.jpeg" class="psy_img">   <img src="img\kpt\kpt_3.jpeg" alt=""> </a>
             <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
             <span class="row_img_first_mpgu">Концептуализация и реструктуризация дисфункцинальных(иррациональных) убеждений в КПТ  </span>
             <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии </span>
         </div>
         <div class="row_img__first">
-            <img src="img\kpt\kpt_4.jpeg" alt=" Когнитивная терапия Аарона Бека ">
+            <a href="img\kpt\kpt_4.jpeg" class="psy_img">   <img src="img\kpt\kpt_4.jpeg" alt=" Когнитивная терапия Аарона Бека "> </a>
             <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
             <span class="row_img_first_mpgu"> Когнитивная терапия Аарона Бека </span>
             <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
         </div>
         <div class="row_img__first">
-            <img src="img\kpt\kpt_5.jpeg" alt="Альберт Эллис">
+            <a href="img\kpt\kpt_5.jpeg" class="psy_img"> <img src="img\kpt\kpt_5.jpeg" alt="Альберт Эллис"></a> 
             <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
             <span class="row_img_first_mpgu"> Основы рационально-эмотивно-поведенческой терапии Альберта Эллиса</span>
             <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
         </div>
     </div>
     <div class="row_img row_img_second">
+
         <div class="row_img__first">
-            <img src="img\kpt\kpt_12.jpeg" alt="">
-            <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
-            <span class="row_img_first_mpgu">Концептуализация и реструктуризация дисфункциональных(иррациональных) убеждений в КПТ </span>
-            <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
-        </div>
-        <div class="row_img__first">
-            <img src="img\kpt\kpt_6.jpeg" alt="основы поведенческой терапии">
+            <a href="img\kpt\kpt_6.jpeg" class="psy_img">   <img src="img\kpt\kpt_6.jpeg" alt="основы поведенческой терапии"> </a>
             <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ</span>
             <span class="row_img_first_mpgu"> Основы поведенческой терапии</span>
             <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
         </div>
         <div class="row_img__first">
-            <img src="img\kpt\kpt_7.jpeg" alt="терапия пустого усилия">
+            <a href="img\kpt\kpt_7.jpeg" class="psy_img">   <img src="img\kpt\kpt_7.jpeg" alt="терапия пустого усилия"> </a>
             <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
             <span class="row_img_first_mpgu"> Терапия пустого усилия </span>
             <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии </span>
         </div>
-    </div>
-    <div class="row_img row_img_second">
         <div class="row_img__first">
-            <img src="img\kpt\kpt_8.jpeg" alt="">
+            <a href="img\kpt\kpt_8.jpeg" class="psy_img">    <img src="img\kpt\kpt_8.jpeg" alt=""></a>
             <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ</span>
             <span class="row_img_first_mpgu"> КПТ тревожных расстройств </span>
             <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии </span>
         </div>
+    </div>
+    <div class="row_img row_img_second">
+
         <div class="row_img__first">
-            <img src="img\kpt\kpt_9.jpeg" alt="">
+            <a href="img\kpt\kpt_9.jpeg" class="psy_img">  <img src="img\kpt\kpt_9.jpeg" alt=""></a>
             <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
             <span class="row_img_first_mpgu"> КПТ депрессивных расстройств </span>
             <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии  </span>
         </div>
         <div class="row_img__first">
-            <img src="img\kpt\kpt_10.jpeg" alt="">
+            <a href="img\kpt\kpt_10.jpeg" class="psy_img"><img src="img\kpt\kpt_10.jpeg" alt=""></a>
             <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ  </span>
             <span class="row_img_first_mpgu"> КПТ зависимого поведения </span>
             <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
         </div>
     </div>
-    <div class="row_img_third">
-        <div class="row_img__first">
-            <img src="" alt="">
-            <span class="row_img__first_span">СВТ</span>
-            <span class="row_img_first_mpgu"> Сертификат об окончании долгосрочной программы обучения когнитивно-поведенческой психотерапии</span>
-            <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии </span>
-        </div>
 
-        </div>
     </div>
 
 
