--- a/app/index.html
+++ b/app/index.html
@@ -89,10 +89,10 @@
             Эмоциональная зависимость;<br>
             Болезненный разрыв отношений.<br>
         </p>
-        <p>  Эмоциональная пустота, потеря 
-            смысла жизни, проблемы с 
+        <p>  Эмоциональная пустота; потеря 
+            смысла жизни; проблемы с 
             самоопределением и поиском 
-            собственного пути, экзистенциальные 
+            собственного пути; экзистенциальные 
             вопросы.
         </p>
     </div>
