--- a/app/materials.html
+++ b/app/materials.html
@@ -52,12 +52,12 @@
 <h5 class="psy_in_our_life__h5  first_head">Симптомы депрессии:</h5>
 <div class="wrapper_symptoms_depression">
     <ul class="method_first__list">
-        <li>подавленность</li>
-        <li>тоска</li>
+        <li>подавленность;</li>
+        <li>тоска;</li>
         <li>тревожность</li>
         <li>потеря интереса к любимым занятиям;</li>
         <li>чувство безнадёжности; </li>
-        <li>проблемы с концентрацией внимания</li>
+        <li>проблемы с концентрацией внимания;</li>
         <li>неуверенность в себе;</li>
         <li>изменение аппетита;</li>
         <li>ощущение бесполезности или излишней вины;</li>
@@ -124,7 +124,7 @@
     </div>
 
     </div>
-    <h5 class="psy_in_our_life__h5">В чём отличие тревоги от фобии и страха?</h5>
+    <h5 class="psy_in_our_life__h5 centr">В чём отличие тревоги от фобии и страха?</h5>
     <p class="psy_in_our_life__p">
             Страх — это конкретная эмоция, у которой всегда есть объект. 
             Тревога — эмоция более диффузная, она не имеет конкретного объекта.
