--- a/alter_app/index.html
+++ b/alter_app/index.html
@@ -67,9 +67,9 @@
         </div>
     </div>
     </div>
-    <div class="wrapper_about_me columns container">
+    <div class="wrapper_about_me columns">
         <div class="wrapper_about_me__ava column">
-            <img src="img/main_ava.png" alt="фотография Натальи Чижиковой психолог">
+            <!-- <img src="img/main_ava.png" alt="фотография Натальи Чижиковой психолог"> -->
         </div>
         <div class="wrapper_about_me__text column">
             <p>Я получила двойное психологическое образование: степень
@@ -89,21 +89,22 @@
                 психотерапии. Консультирую взрослых и подростков.</p>
         </div>
     </div>
-    <div class="wrapper_reasons_to_me">
-        <h2 class="wrapper_reasons_to_me__h2 " data-wow-offset="2">Причины, по которым вам имеет смысл обратиться именно
-            ко мне:</h2>
-        <div class="wrapper_reasons_to_me_wrap">
-            <div class="wrapper_reasons_to_me__card" data-wow-offset="2">
-                <div class="card_img"><img src="img/main_dark_thoughts.png" alt="депрессивные мысли психолог"></div>
+    <h2 class="wrapper_reasons_to_me__h2  subtitle">Причины, по которым вам имеет смысл обратиться именно
+        ко мне:</h2>
+    <div class="wrapper_reasons_to_me columns">
+       
+        <div class="wrapper_reasons_to_me_wrap column">
+            <div class="wrapper_reasons_to_me__card">
+                <div class="card_img dark"></div>
 
             </div>
-            <div class="wrapper_reasons_to_me__card" data-wow-offset="2">
-                <div class="card_img"><img src="img/main_couple.png"
-                        alt="семейная пара с проблемами в отношениях психолог"></div>
+        </div>
+            <div class="wrapper_reasons_to_me__card column">
+                <div class="card_img main_couple"></div>
 
             </div>
-            <div class="wrapper_reasons_to_me__card" data-wow-offset="40">
-                <div class="card_img"><img src="img/main_girls.png" alt="осуждение в обществе психолог"></div>
+            <div class="wrapper_reasons_to_me__card column">
+                <div class="card_img main_girls"></div>
 
             </div>
         </div>
