--- a/alter_app/index.html
+++ b/alter_app/index.html
@@ -31,7 +31,6 @@
 
     </div>
 
-
     <div class="container">
         <nav class="navigation">
             <a href="about.html" class="navbar-item">
@@ -91,7 +90,7 @@
     </div>
     <h2 class="wrapper_reasons_to_me__h2  subtitle">Причины, по которым вам имеет смысл обратиться именно
         ко мне:</h2>
-    <div class="wrapper_reasons_to_me columns">
+    <div class="wrapper_reasons_to_me columns is-3">
        
         <div class="wrapper_reasons_to_me_wrap column">
             <div class="wrapper_reasons_to_me__card">
@@ -108,20 +107,28 @@
 
             </div>
         </div>
-        <div class="wrapper_reasons_to_me_text wow fadeIn">
-            <p>Депрессивные состояния;<br>
-                Страхи, тревоги, фобии (в том числе аэрофобия, социофобия, клаустрофобия);<br>
-                Панические атаки.
+        <div class="wrapper_reasons_to_me_text columns">
+            <div class="column">
+            <p>
+                
+               <div> Депрессивные состояния;</div>
+               <div>Страхи, тревоги, фобии (в том числе аэрофобия, социофобия, клаустрофобия);</div> 
+                <div>Панические атаки.</div> 
             </p>
-            <p>Трудности с построением близких и доверительных отношений;<br>
-                Эмоциональная зависимость;<br>
-                Болезненный разрыв отношений.<br>
+        </div>
+        <div class="column">
+            <p>
+               <div>Трудности с построением близких и доверительных отношений; </div> 
+                <div>Эмоциональная зависимость; </div> 
+                <div>Болезненный разрыв отношений. </div> 
             </p>
-            <p> Эмоциональная пустота; потеря
-                смысла жизни; проблемы с
-                самоопределением и поиском
-                собственного пути; экзистенциальные
-                вопросы.
+        </div>
+        <div class="column">
+            <p> 
+               <div>Эмоциональная пустота; </div> 
+               <div>потеря смысла жизни; </div> 
+                <div>проблемы с самоопределением и поиском собственного пути; </div> 
+                <div> экзистенциальные вопросы. </div>
             </p>
         </div>
     </div>
