--- a/alter_app/index.html
+++ b/alter_app/index.html
@@ -90,7 +90,7 @@
     </div>
     <h2 class="wrapper_reasons_to_me__h2  subtitle">Причины, по которым вам имеет смысл обратиться именно
         ко мне:</h2>
-    <div class="wrapper_reasons_to_me columns is-3">
+    <div class="wrapper_reasons_to_me columns is-2">
        
         <div class="wrapper_reasons_to_me_wrap column">
             <div class="wrapper_reasons_to_me__card">
@@ -107,8 +107,8 @@
 
             </div>
         </div>
-        <div class="wrapper_reasons_to_me_text columns">
-            <div class="column">
+        <div class="wrapper_reasons_to_me_text columns is-1">
+            <div class="column wrapper_reasons_to_me_text__p">
             <p>
                 
                <div> Депрессивные состояния;</div>
@@ -116,14 +116,14 @@
                 <div>Панические атаки.</div> 
             </p>
         </div>
-        <div class="column">
+        <div class="column wrapper_reasons_to_me_text__p">
             <p>
                <div>Трудности с построением близких и доверительных отношений; </div> 
                 <div>Эмоциональная зависимость; </div> 
                 <div>Болезненный разрыв отношений. </div> 
             </p>
         </div>
-        <div class="column">
+        <div class="column wrapper_reasons_to_me_text__p">
             <p> 
                <div>Эмоциональная пустота; </div> 
                <div>потеря смысла жизни; </div> 
